--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,50 @@
+/*
+===============
+Variables
+===============
+*/
+
+:root {
+  /* background primary colours*/
+  --clr-background-1: #000;
+  --clr-background-2: #FB7161;
+  --clr-background-3: #F5F5FF;
+  --clr-background-4: #f0f0f0;
+  --clr-background-5: #fff;
+  --clr-background-6: #fed0ca;
+  --clr-background-7: #FEBE2B;
+
+  /* font primary colours */
+  --clr-primary-1: #fff;
+  --clr-primary-2: #fb7161;
+  --clr-primary-3: #000;
+  --clr-primary-4: #71737B;
+  --clr-primary-5: #F5F5FF;
+}
+
 body {
   font-family: 'Lato', sans-serif;
 }
 
 p {
-  color: #71737B;
+  color: var(--clr-primary-4);
   font-size: 1.2rem;
 }
 
 a {
   text-decoration: none;
-  color: #FB7161;
+  color: var(--clr-background-2);
+
 }
 
 a:hover {
-  color: white;
+  color: var(--clr-primary-1);
 }
 
 h1 {
   font-weight: 900;
 }
+
 h2 {
   font-weight: 900;
   line-height: 2.5rem;
@@ -27,7 +53,7 @@ h2 {
 
 h3 {
   margin-bottom: 20px;
-  color: orange;
+  color: var(--clr-primary-2);
   letter-spacing: 2px;
   font-size: 1rem;
 }
@@ -42,13 +68,17 @@ h5 {
 /* global css settings */
 
 .btn-primary {
-  background-color: #FB7161 !important;
-  border: solid 1px #FB7161;
+  background-color: var(--clr-background-2) !important;
+  border: solid 1px var(--clr-background-2);
   border-radius: 5px;
 }
 
+.btn-primary:hover {
+  border: solid 1px var(--clr-background-1);
+}
+
 .fa-arrow-up {
-  color: #FB7161;
+  color: var(--clr-primary-2);
 }
 
 .percentages {
@@ -63,12 +93,11 @@ h5 {
 }
 
 .hero-black {
-  background-color: black;
+  background-color: var(--clr-background-1);
   height: 915px;
   border-radius: 0 0 50px 0;
   padding: 2% 5% 5% 5%;
   margin-left: 0;
-
 }
 
 .logo {
@@ -77,13 +106,13 @@ h5 {
 
 .hero-title {
   padding: 10% 20% 1% 5%;
-  color: white;
+  color: var(--clr-primary-1);
   font-size: 4rem;
   font-weight: 900;
 }
 
 .hero-description {
-  color: white;
+  color: var(--clr-primary-1);
   padding: 0 20% 0 5%;
   font-size: 1.2rem;
 }
@@ -91,7 +120,6 @@ h5 {
 .telephone {
   padding: 40px 25%;
   font-size: 1.2rem;
-
 }
 
 .hero-img {
@@ -100,18 +128,16 @@ h5 {
   width: 800px;
   top: 100px;
   left: 55%;
-  /* left: -150px;
-  top: 20px; */
 }
 
 .icon-white {
   padding: 40px 0 0 5%;
-  color: white;
+  color: var(--clr-primary-1);
   font-size: 4rem;
 }
 
 .icon-white:hover {
-  color: #FB7161;
+  color: var(--clr-primary-2);
 }
 
 /* Delivering Results section */
@@ -134,22 +160,21 @@ h5 {
   padding: 7% 10%;
   margin: 20px auto 0;
   position: relative;
-
 }
 
 .selling-background {
-  background-color: #F5F5FF;
+  background-color: var(--clr-background-3);
   position: relative;
   bottom: 120px;
   z-index: -2;
-
 }
+
 .sb-number {
   font-size: 7rem;
   position: absolute;
   top: -40px;
   left: 5px;
-  color: #F5F5FF;
+  color: var(--clr-primary-5);
   z-index: 0;
   font-weight: 900;
 }
@@ -161,14 +186,14 @@ h5 {
 
 .selling-heading {
   font-weight: bold;
-  color: black;
+  color: var(--clr-primary-3);
 }
 
 #selling-point-container1 {
   border: none;
   padding-top: 2%;
-  box-shadow: 5px 5px 5px #f0f0f0;
-  background-color: #FB7161;
+  box-shadow: 5px 5px 5px var(--clr-background-4);
+  background-color: var(--clr-background-2);
   position: relative;
   z-index: 0;
 }
@@ -176,8 +201,8 @@ h5 {
 #selling-point-container2 {
   border: none;
   padding-top: 2%;
-  box-shadow: 5px 5px 5px #f0f0f0;
-  background-color: #fff;
+  box-shadow: 5px 5px 5px var(--clr-background-4);
+  background-color: var(--clr-background-5);
   position: relative;
   z-index: 0;
 }
@@ -185,14 +210,16 @@ h5 {
 #selling-point-container3 {
   border: none;
   padding-top: 2%;
-  box-shadow: 5px 5px 5px #f0f0f0;
-  background-color: #fff;
+  box-shadow: 5px 5px 5px var(--clr-background-4);
+  background-color: var(--clr-background-5);
   position: relative;
   z-index: 0;
 }
 
-#selling-point-container1:hover, #selling-point-container2:hover, #selling-point-container3:hover {
-  background-color: #fed0ca;
+#selling-point-container1:hover,
+#selling-point-container2:hover,
+#selling-point-container3:hover {
+  background-color: var(--clr-background-6);
 }
 
 .review-content-container {
@@ -204,18 +231,18 @@ h5 {
   font-size: 5rem;
   line-height: 0.5;
   text-align: center;
-  color: #71737B;
+  color: var(--clr-primary-4);
 }
+
 #quotetext {
   font-family: 'Lato', sans-serif;
-  color: black;
+  color: var(--clr-primary-3);
   padding-left: 30px;
   margin-bottom: 30px;
   font-weight: bold;
   font-size: 2.5rem;
   text-align: center;
   line-height: 0.1;
-
 }
 
 #authorimg, #author, #position {
@@ -223,7 +250,7 @@ h5 {
 }
 
 #position {
-  color: #FB7161;
+  color: var(--clr-primary-2);
   font-size: 0.9rem;
 }
 
@@ -246,7 +273,7 @@ h5 {
 
 .pod-background {
   height: 380px;
-  background-color: #FEBE2B;
+  background-color: var(--clr-background-7);
 }
 
 .img-container {
@@ -258,7 +285,6 @@ h5 {
   right: 10%;
   bottom: -450px;
   max-width: 50%;
-
 }
 
 .wall-img {
@@ -266,7 +292,6 @@ h5 {
   right: 40%;
   bottom: -400px;
   max-width: 50%;
-
 }
 
 .onboarding-img {
@@ -274,7 +299,6 @@ h5 {
   right: 25%;
   bottom: -500px;
   max-width: 55%;
-
 }
 
 /* Devon carers section */
@@ -286,7 +310,7 @@ h5 {
 .gradient-rectangle {
   width:100%;
   height: 500px;
-  margin-left: 0;
+  margin-left: -15px;
   position: relative;
 }
 
@@ -307,22 +331,21 @@ h5 {
 
 #strategy {
   margin: 9%;
-  color: white;
+  color: var(--clr-primary-1);
   position: relative;
 }
 
 #strategy h3 {
-  color: white;
+  color: var(--clr-primary-1);
 }
 
 #strategy p {
-  color: white;
+  color: var(--clr-primary-1);
 }
 
 .strategy-container {
-  background-color: #FB7161;
+  background-color: var(--clr-background-2);
   padding: 30px;
-
 }
 
 .contact-details {
@@ -346,21 +369,19 @@ h5 {
 
 /* Footer section */
 
-#footer {
-
-}
-
 .footer-grey-bg {
   position: relative;
   margin-top: 100px;
-  background-color: #F5F5FF;
+  margin-bottom: 0px;
+  height:400px;
+  background-color: var(--clr-background-3);
 }
 
 .footer-black-bg {
   position: relative;
   height: 500px;
   margin: auto 0 0 0;
-  background-color: #000;
+  background-color: var(--clr-background-1);
   border-radius: 0 100px 0 0;
 }
 
@@ -376,29 +397,29 @@ h5 {
 .address {
   font-weight: bold;
   padding: 20px 30%;
-  color: white;
+  color: var(--clr-primary-1);
 }
 
 .address p {
-  color: white;
+  color: var(--clr-primary-1);
 }
 
 .news-container {
-  padding: 15%;
+  padding: 15% 15% 0 15%;
 }
 
 .email-address {
   border: none;
-  border-bottom: 2px solid #fb7161;
+  border-bottom: 2px solid var(--clr-background-2);
   width: 300px;
   font-size: 1.5rem;
-  color: grey;
+  color: var(--clr-primary-4);
   background-color: inherit;
   outline: none;
 }
 
 .submit-btn {
-  color: #FB7161;
+  color: var(--clr-primary-2);
   font-size: 2rem;
 }
 
@@ -417,12 +438,14 @@ h5 {
     width: 90%;
     border-radius: 0 50px 0 0;
   }
+
   .hero-title, .hero-description, .icon-white {
     text-align: center;
     padding: 30px;
     margin: auto;
     width: 100%;
   }
+
 /* adjust Selling point section */
   .selling-point-container {
     margin: 20px auto;
@@ -432,9 +455,11 @@ h5 {
   .pod-background {
     margin-top: 200px;
   }
+
   .pod-container {
     margin-left: 0;
   }
+
 /* adjust devon case study section */
   .devon-text {
     margin-top: 100px;
@@ -442,16 +467,18 @@ h5 {
 
 .brief-details {
   position: relative;
-}
+  }
 
 /* adjust black background on footer to be full width on mobile */
 .footer-black-bg {
   width: 100%;
-}
+  }
+
 .footer-grey-bg {
   margin-top:0;
-}
+  }
+
 .news-container {
   padding: 50px;
-}
+  }
 }
