--- a/css/contact.css
+++ b/css/contact.css
@@ -1,35 +1,41 @@
 body{
-		/* background-color: #25274d; */
-    background-color: #000;
+		background-color: #000;
 	}
 	.contact{
 		padding: 4%;
 		height: 400px;
 	}
-	.col-md-3{
+
+	.left-panel{
 		background: #fb7161;
 		padding: 4%;
 		border-top-left-radius: 0.5rem;
 		border-bottom-left-radius: 0.5rem;
-	}
+  }
+
 	.contact-info{
 		margin-top:10%;
 	}
-	.contact-info img{
+
+	img {
 		margin-bottom: 15%;
 	}
-	.contact-info h2{
+
+	h2 {
 		margin-bottom: 10%;
 	}
-	.col-md-9{
+
+	.right-panel{
 		background: #fff;
 		padding: 3%;
 		border-top-right-radius: 0.5rem;
 		border-bottom-right-radius: 0.5rem;
 	}
-	.contact-form label{
+
+	.contact-form label {
 		font-weight:600;
 	}
+
 	.contact-form button{
 		background: #25274d;
 		color: #fff;
@@ -39,3 +45,18 @@ body{
 	.contact-form button:focus{
 		box-shadow:none;
 	}
+
+  .homepage {
+    margin: auto;
+    text-align: center;
+    font-size: 12rem;
+    color: #fb7161;
+  }
+
+  .homepage:hover {
+    color: #71737B;
+  }
+
+  .submit {
+    margin-top: 30px;
+  }
